Corrected 'marriage' to 'civil partnership'

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_same_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_same_sex.html.erb
@@ -1,6 +1,6 @@
 ## Before you start
 
-Contact the local Italian ‘comune’ (town hall) to find out about local marriage laws, including what documents you and your partner will need.
+Contact the local Italian ‘comune’ (town hall) to find out about local civil partnership laws, including what documents you and your partner will need.
 
 ## Prove you’re free to register a civil partnership
 
@@ -22,7 +22,7 @@ If you’re not in the UK or Italy you’ll need to either:
 
 You’ll need to get a CNI and a statutory declaration if you’re in the UK.
 
-To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your civil partnership. A CNI costs £35.
 
 ^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
 
@@ -100,13 +100,13 @@ If you’ve got a Nulla Osta, you need to wait 15 days after it’s issued befor
 
 ## After you register your civil partnership
 
-Your marriage will be recognised in the UK if:
+Your civil partnership will be recognised in the UK if:
 
 - you follow the correct process according to the law in Italy
 - it would be allowed under UK law
 
-You won’t need to register your marriage in the UK.
+You won’t need to register your civil partnership in the UK.
 
-If you need extra copies of your marriage certificate, you can apply for them at the local comune. 
+If you need extra copies of your civil partnership certificate, you can apply for them at the local comune. 
 
 If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
