--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.govspeak.erb
@@ -1,4 +1,4 @@
-<% if calculator.partner_is_same_sex? && !calculator.resident_of_ceremony_country? %>
+<% if calculator.partner_is_same_sex? && calculator.resident_of_uk? %>
     Civil partnership in Sweden
 <% else %>
     Marriage in Sweden
