--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.html.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? && !calculator.resident_of_ceremony_country? %>
-    Civil partnership in Sweden
+    Marriage in Sweden
 <% else %>
     Marriage in Sweden
 <% end %>
