Update No option text for question 2
As stated in this [1], I have made changes to question 2 No
option text

I have included the regression test artefacts within to show
areas affected by these changes

Based on the above, I have reviewed the changes to the regression
test artefacts and they appear as expected.

Already existing unit, regression and integration tests passed,
giving assurance that the aforementioned commit/changes have had
no (interfering) effect to other smart answer

[1] https://docs.google.com/document/d/1XkyRR2iql7I6kRyXCOCpxGtmIdOnzAfsHltnyTbQiSk/edit

--- a/lib/smart_answer_flows/simplified-expenses-checker/questions/buying_new_vehicle.govspeak.erb
+++ b/lib/smart_answer_flows/simplified-expenses-checker/questions/buying_new_vehicle.govspeak.erb
@@ -5,5 +5,5 @@
 <% options(
   "new": "Yes - new and unused",
   "used": "Yes - second hand",
-  "no": "No"
+  "no": "No - I’ve used my vehicle for my business in a previous tax year"
 ) %>
