Update affecting child born in Philippines
This Content affected first time child passport applicants born in. the
Philippines.

The reason behind this update is due to the first time child applications
from Philippines can be complex – HMPO have published a guide to
explain why and what additional evidence is required. They want to link
to the guide from the first time child passport pages, where a child is
born in the Philippines. This will mean the user will have the information
before they apply, which  will help to minimise delays to the progress
of their application.

I have included the regression test artefacts within to show areas
affected by this update

Based on the above, I have reviewed the changes to the regression
test artefacts and they appear as expected.

Already existing unit, regression and integration tests passed,
giving assurance that the aforementioned commit/changes have had
no (interfering) effect to other smart answers.

--- a/lib/smart_answer_flows/overseas-passports/outcomes/ips_application_result_online.govspeak.erb
+++ b/lib/smart_answer_flows/overseas-passports/outcomes/ips_application_result_online.govspeak.erb
@@ -10,7 +10,13 @@
 
   Applications will take longer if:
 
-  - HM Passport Office need to ask you for more information or documents
+  <% if calculator.birth_location == "philippines" &&
+      calculator.child_or_adult == "child" &&
+      calculator.general_action == "applying" %>
+    - HM Passport Office need to ask you for more information or documents, especially for [applicants born in the Philippines or with parents who are married or divorced and have links to the Philippines](/government/publications/applying-for-a-passport-from-outside-the-uk-applicants-with-links-to-the-philippines)
+  <% else %>
+    - HM Passport Office need to ask you for more information or documents
+  <% end %>
   - the photographs you send are rejected
 
   Don’t book any travel until you have a valid passport. If you need to travel more urgently, you may be able to apply for an [Emergency Travel Document](/emergency-travel-document).
