--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/third_country/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/third_country/partner_british/_same_sex.govspeak.erb
@@ -11,7 +11,7 @@ There are 2 ways you can get a CNI:
 - [go to the UK and post notice with a UK registrar](https://www.gov.uk/marriage-abroad/y/sweden/uk/partner_local/same_sex)
 - [go to Sweden and post notice at the embassy or consulate there](https://www.gov.uk/marriage-abroad/y/sweden/ceremony_country/partner_local/same_sex)
 
-%If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
+%If you choose to post notice in Sweden, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
 
 ## Fees
 
