--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb
@@ -32,9 +32,8 @@ You must take the form with you to your appointment.
 
 ## Fees
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
+Service | Fee
+-|-
+Affidavit or affirmation for marriage | <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Latvia](/government/publications/latvia-consular-fees). You can only pay in cash.
