Replace absolute with relative path
This commit removes the 'https://www.gov.uk' from urls that has it and
replace it with the relative equivalent.

I have included the regression test artefacts within to show areas
affected by these changes

Based on the above, I have reviewed the changes to the regression
test artefacts and they appear as expected.

Already existing unit, regression and integration tests passed,
giving assurance that the aforementioned commit/changes have had
no (interfering) effect to other smart answers.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_same_sex.govspeak.erb
@@ -12,11 +12,11 @@ You and your partner will need to sign a declaration and provide proof of reside
 
 You’ll both need your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need either:
 
-+ [a decree absolute or final order](https://www.gov.uk/copy-decree-absolute-final-order)
++ [a decree absolute or final order](/copy-decree-absolute-final-order)
 
 + a civil partnership dissolution or annulment certificate
 
-+ the [death certificate](https://www.gov.uk/order-copy-birth-death-marriage-certificate/)
++ the [death certificate](/order-copy-birth-death-marriage-certificate/)
 
 ##What you need to do
 
@@ -44,6 +44,6 @@ Receiving a notice of registration | <%= format_money calculator.consular_fee(:r
 Registering a marriage | <%= format_money calculator.consular_fee(:registering_marriage) %>
 Issuing a marriage certificate | <%= format_money calculator.consular_fee(:issuing_marriage_certificate) %>
 
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Mozambique](https://www.gov.uk/government/publications/mozambique-consular-fees).
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Mozambique](/government/publications/mozambique-consular-fees).
 
 You can pay by cash or credit card, but not by personal cheque.
