Changed info about appointment

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_british/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/ceremony_country/partner_british/_opposite_sex.govspeak.erb
@@ -7,13 +7,12 @@ Contact the relevant local authorities in Vietnam to find out about local marria
 
 You'll be asked to provide an affirmation or affidavit document to prove you're allowed to marry.
 
-Make an appointment at the British embassy in Vietnam or the British Consulate General in Ho Chi Minh City to swear an affidavit (written statement of facts) that you're free to marry:
+Make an appointment at the British embassy in Hanoi or the British Consulate General in Ho Chi Minh City to swear an affidavit (written statement of facts) that you're free to marry:
 
 - [make an appointment at the British Embassy in Hanoi](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-hanoi/oaths-affirmations-and-affidavits/slot_picker)
 - [make an appointment at the Consulate General in Ho Chi Minh City](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-ho-chi-minh-city/oaths-affirmations-and-affidavits/slot_picker)
 
-
-Before booking your appointment, you must complete an [affirmation or affidavit](/government/publications/affirmation-affidavit-of-marital-status-vietnam) of marital status. Don’t sign it - you’ll do that at the appointment in front of a consular officer. 
+At your appointment, you'll complete and sign an [affirmation or affidavit](/government/publications/affirmation-affidavit-of-marital-status-vietnam) of marital status in front of a consular officer. You can fill in (but not sign) the form before your appointment. 
 
 ###Legalisation and translation
 
