Added information for users born before April

--- a/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
@@ -14,6 +14,10 @@
   <% end %>
 <% end %>
 
+To top up your pension by £5 per week, you’ll need to make a lump sum payment of £1,970.
+
+^If your birthday is before 5 April you should wait until after your birthday to top up. Your lump sum will be less. ^
+
 
   You should get [financial advice](/plan-retirement-income/get-financial-advice) when planning your retirement income.
 
