--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
@@ -44,13 +44,15 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-Service | Fee
--|-
-Issuing a CNI, Nulla Osta or equivalent | £50
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+    collection: calculator.services,
+    as: :service,
+    locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Denmark](/government/publications/denmark-consular-fees).
 
-You can pay by cash or credit card, but not by personal cheque.
+<%=  render partial: 'how_to_pay.govspeak.erb',
+    locals: {calculator: calculator}%>
 
 *[CNI]:certificate of no impediment
 
