--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
@@ -54,5 +54,6 @@ You normally have to pay fees for consular services in the local currency - thes
 <%=  render partial: 'how_to_pay.govspeak.erb',
     locals: {calculator: calculator}%>
 
+*[CNI]:certificate of no impediment
 
 
