--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_same_sex.govspeak.erb
@@ -16,21 +16,10 @@ To get a CNI, you must post notice of your intended marriage in Denmark. You can
 
 You’ll need to have been living in Denmark for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
-$A
-British Embassy Copenhagen
-Kastelsvej 36-40
-DK-2100  Copenhagen
-Denmark
-$A
-
-$C
-Consular / passport enquiries: consular.copenhagen@fco.gov.uk
-Telephone : +45 35 44 52 00
-
-Email: <Enquiry.Copenhagen@fco.gov.uk>
-
-[British Embassy Copenhagen - opening hours](https://www.gov.uk/government/world/organisations/british-embassy-copenhagen/office/british-embassy)
-$C
+<%= render partial: 'shared/overseas_passports_embassies.govspeak.erb',
+    locals: {
+        overseas_passports_embassies: calculator.overseas_passports_embassies
+    } %>
 
 You’ll need to provide supporting documents, including:
 
