Changes to China same-same sex partner local
Changes to docs partner needs: 

- They need a certificate of single status
- Can no longer prove they're unmarried with their passport or document from government

Reworded section about if you've been married before.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/third_country/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/third_country/partner_local/_same_sex.govspeak.erb
@@ -14,10 +14,11 @@ Make an appointment at your nearest embassy or consulate.
 
 You need to have been living in China for 21 days. You and your partner will need to sign a declaration and provide proof of residence for example, an employer’s letter or a bank statement.
 
-You’ll both need to bring your original passports. You’ll also need evidence that your partner is free to marry - a document from their government or their passport that says they are unmarried. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need to provide:
+You’ll both need to bring your original passports. Your partner will need a certificate of single status to prove they’re free to marry. They can get this document from a notary public in the area where their hukou (household registration document) is registered.
 
-- a [decree absolute or final order](/copy-decree-absolute-final-order)
-- the [death certificate](/order-copy-birth-death-marriage-certificate/)
+If you or your partner have been divorced or in a civil partnership before, you’ll need a [decree absolute or final order](/copy-decree-absolute-final-order).
+
+If you or your partner have been widowed, you’ll need the [death certificate](/order-copy-birth-death-marriage-certificate/).
 
 ##What you need to do
 
