Added links back in

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/ceremony_country/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/ceremony_country/partner_local/_same_sex.govspeak.erb
@@ -16,9 +16,9 @@ You need to have been living in China for 21 days. You and your partner will nee
 
 You’ll both need to bring your original passports. Your partner will need a certificate of single status to prove they’re free to marry. They can get this document from a notary public in the area where their hukou (household registration document) is registered.
 
-If you or your partner have been divorced or in a civil partnership before, you’ll need a decree absolute or final order.
+If you or your partner have been divorced or in a civil partnership before, you’ll need a [decree absolute or final order](/copy-decree-absolute-final-order).
 
-If you or your partner have been widowed, you’ll need the death certificate.
+If you or your partner have been widowed, you’ll need the [death certificate](/order-copy-birth-death-marriage-certificate/).
 
 ##What you need to do
 
