--- a/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
@@ -14,7 +14,7 @@
   <% end %>
 <% end %>
 
-^If your birthday is before 5 April you should wait until after your birthday to top up. Your lump sum will be less. ^
+%If your birthday is on or before 5 April, wait until your birthday to top up because you'll pay less.%
 
 
   You should get [financial advice](/plan-retirement-income/get-financial-advice) when planning your retirement income.
