Changed visa to passport stamp

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_same_sex.govspeak.erb
@@ -17,7 +17,7 @@ It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage)
 You need to bring:
 
 - your and your partner’s passports
-- proof that you’ve been in the Philippines for at least 7 full days, for example a utility bill, bank statement, visa or boarding pass
+- proof that you’ve been in the Philippines for at least 7 full days, for example a utility bill, bank statement, passport stamp or boarding pass
 - proof that your partner is free to get married if they’re not British, for example a certificate of no impediment or a passport showing marital status
 
 If you or your partner have been married or in a civil partnership before, you’ll also need:
@@ -34,7 +34,7 @@ The British embassy will display your notice publicly for 14 days. If nobody reg
 ### Sign a declaration
 You and your partner also need to sign a declaration to say that you’re legally allowed to get married. The British embassy will give you the document to sign.
 
-You both need to bring proof that you live in the Philippines or you’ve been there for at least the last 21 full days. This could be a utility bill, bank statement, visa or boarding pass.
+You both need to bring proof that you live in the Philippines or you’ve been there for at least the last 21 full days. This could be a utility bill, bank statement, passport stamp or boarding pass.
 
 ## Get married
 Your wedding ceremony will be at the British embassy in Manila on the date you agreed.
