Hungary - user UK - partner other - opposite sex
###Legalisation and translation

REMOVED
You might need to exchange your UK-issued CNI for one that’s valid in Hungary at the nearest embassy or consulate nearest to where you’re getting married.

ADDED
You’ll need to exchange your UK-issued CNI for one that’s valid in Hungary at the British embassy in Budapest.
[Make an appointment to exchange your CNI at the British Embassy Budapest](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-budapest/exchange-a-certificate-of-no-impediment/slot_picker).

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/uk/partner_other/_opposite_sex.govspeak.erb
@@ -12,7 +12,9 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 ###Legalisation and translation
 
-You might need to exchange your UK-issued CNI for one that’s valid in Hungary at the nearest embassy or consulate to where you’re getting married.
+You’ll need to exchange your UK-issued CNI for one that’s valid in Hungary at the British embassy in Budapest.
+
+[Make an appointment to exchange your CNI at the British Embassy Budapest](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-budapest/exchange-a-certificate-of-no-impediment/slot_picker).
 
 You should also check if it needs to be:
 
