Use AB Testing Gem

--- a/app/views/smart_answers/visualise.html.erb
+++ b/app/views/smart_answers/visualise.html.erb
@@ -8,6 +8,7 @@
 <%= javascript_include_tag 'visualise' %>
 <%= stylesheet_link_tag 'joint' %>
 <%= stylesheet_link_tag 'visualise' %>
+<%= education_navigation_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
 <% content_for :before_wrapper do %>
