--- a/app/views/smart_answers/show.html.erb
+++ b/app/views/smart_answers/show.html.erb
@@ -5,11 +5,10 @@
     SmartAnswer.AJAX_ENABLED = <%= ajax_enabled_for?(@presenter.name) %>;
   </script>
   <%= javascript_include_tag "application", defer: true %>
+  <%= education_navigation_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
-<% if @navigation_helpers %>
-  <%= render partial: 'govuk_component/breadcrumbs', locals: breadcrumbs %>
-<% end %>
+<%= render partial: 'govuk_component/breadcrumbs', locals: breadcrumbs %>
 
 <div class="grid-row">
   <main id="content" role="main">
