Philippines - Added full stops

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
@@ -10,9 +10,9 @@ This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_fo
 
 An affidavit is a religious document. If you don’t want to swear a religious oath, you can sign an affirmation instead.
 
-s1. Download an [affirmation or affidavit](/government/publications/marriage-in-the-philippines)
-s2. Fill it in on your computer on one side of A4 - the embassy won’t accept it if it’s handwritten
-s3. Print it out but don’t sign it - you’ll need to sign it at the embassy
+s1. Download an [affirmation or affidavit](/government/publications/marriage-in-the-philippines).
+s2. Fill it in on your computer on one side of A4 - the embassy won’t accept it if it’s handwritten.
+s3. Print it out but don’t sign it - you’ll need to sign it at the embassy.
 
 [Make an appointment at the embassy in Manila](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-manila/oaths-affirmations-and-affidavits/slot_picker) to swear your affirmation or affidavit.
 
