Changed divorce doc requirements

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
@@ -28,7 +28,7 @@ You’ll need to bring:
 If you’ve been married or in a civil partnership before, you’ll also need:
 
 
-- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email) - if you’re divorced
+- your original [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email from the court) - if you’re divorced
 - your annulment certificate - if your marriage or civil partnership was annulled
 - your civil partnership dissolution - if your civil partnership was dissolved
 - your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
