--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_proof_identity_1718.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_proof_identity_1718.govspeak.erb
@@ -8,8 +8,8 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [UK passport details form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_uk_passport_details_form_1718_d.pdf)
-  2017 to 2018 | [Birth or adoption certificate form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_birth_adoption_certificate_form_1718_d.pdf)
+  2017 to 2018 | [UK passport details form (PDF, 42KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_uk_passport_details_form_1718_d.pdf)
+  2017 to 2018 | [Birth or adoption certificate form (PDF, 465KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_birth_adoption_certificate_form_1718_d.pdf)
 
   ^Don't send your UK passport.^
 
