--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_ft_1718_continuing.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_ft_1718_continuing.govspeak.erb
@@ -11,9 +11,9 @@
   Academic Year | Form
   - | -
   2017 to 2018 | [apply online](/apply-online-for-student-finance)
-  2017 to 2018 | [PR1 - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_pr1_form_1718_d.pdf)
-  2017 to 2018 | [PR1 - guidance notes (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_pr1_notes_1718_d.pdf)
-  2017 to 2018 | [Tax return guide (PDF,XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_tax_return_guide_1718_d.pdf)
+  2017 to 2018 | [PR1 - form (PDF, 533KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_pr1_form_1718_d.pdf)
+  2017 to 2018 | [PR1 - guidance notes (PDF, 177KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_pr1_notes_1718_d.pdf)
+  2017 to 2018 | [Tax return guide (PDF, 591KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_tax_return_guide_1718_d.pdf)
 
   <%= render partial: 'when_you_can_apply.govspeak.erb' %>
 
