--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_ccg_1718.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_ccg_1718.govspeak.erb
@@ -8,7 +8,7 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [CCG1 - form (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_ccg1_form_1718_d.pdf)
+  2017 to 2018 | [CCG1 - form (PDF, 167KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_ccg1_form_1718_d.pdf)
 
   <%= render partial: 'where_to_send_your_forms_uk.govspeak.erb' %>
 <% end %>
