--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_expenses.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_expenses.govspeak.erb
@@ -8,7 +8,7 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [Costs claim form 2017 to 2018 (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa_costs_claim_form_1718_d.pdf)
+  2017 to 2018 | [Costs claim form 2017 to 2018 (PDF, 50KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa_costs_claim_form_1718_d.pdf)
   2016 to 2017 | [Costs claim form 2016 to 2017 (PDF, 50KB)](http://media.slc.co.uk/sfe/1617/ft/sfe_dsa_claim_form_1617_d.pdf)
 
   <%= render partial: 'where_to_send_your_forms_uk.govspeak.erb' %>
