--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_travel.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_travel.govspeak.erb
@@ -8,12 +8,12 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [Travel Abroad Expenses Form 2017 to 2018 (PDF, XXXKB)](http://media.slc.co.uk/sfe/1718/ft/sfe_travel_abroad_expenses_form_1718_d.pdf)
+  2017 to 2018 | [Travel Abroad Expenses Form 2017 to 2018 (PDF, 435KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_travel_abroad_expenses_form_1718_d.pdf)
   2016 to 2017 | [Travel Abroad Expenses Form 2016 to 2017 (PDF, 435KB)](http://media.slc.co.uk/sfe/1617/ft/sfe_travel_expenses_form_1617_d.pdf)
 
   Student Finance England will automatically send you:
-  
-  - a Course Abroad Form
+
+  - a Course Abroad Form if you need to fill it in
   - a Clinical Study Travel Expenses Form if you're eligible
 
   <%= render partial: 'where_to_send_your_forms_uk.govspeak.erb' %>
