Removed full stop in hint
CHANGED
You can find this on your award review.

TO
You can find this on your award review

REASON
Full stop shouldn't be there. TEST DO NOT PULL.

--- a/lib/smart_answer_flows/part-year-profit-tax-credits/questions/when_did_your_tax_credits_award_end.govspeak.erb
+++ b/lib/smart_answer_flows/part-year-profit-tax-credits/questions/when_did_your_tax_credits_award_end.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  You can find this on your award review.
+  You can find this on your award review
 <% end %>
 
 <% content_for :error_message do %>
