--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_opposite_sex.govspeak.erb
@@ -4,7 +4,12 @@ Contact the [Embassy of Denmark](/government/publications/foreign-embassies-in-t
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You need to apply for either:
+
+- a certificate of no impediment (CNI) from the British Embassy or UK registrar
+- a ‘no trace letter’ from the General Register Office
+
+###Certificate of no impediment (CNI)
 
 You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
 
@@ -38,16 +43,12 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-    collection: calculator.services,
-    as: :service,
-    locals: { calculator: calculator } %>
+Service | Fee
+-|-
+Issuing a CNI, Nulla Osta or equivalent | £50
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Denmark](/government/publications/denmark-consular-fees).
 
-<%=  render partial: 'how_to_pay.govspeak.erb',
-    locals: {calculator: calculator}%>
+You can pay by cash or credit card, but not by personal cheque.
 
 *[CNI]:certificate of no impediment
-
-
