Update date question title
Another change to the calculator

--- a/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/weekly_pay_before_tax.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/weekly_pay_before_tax.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  What is their weekly pay before tax and any other deductions?
+  Make another change
 <% end %>
 
 <% content_for :hint do %>
