--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_other/_opposite_sex.govspeak.erb
@@ -31,6 +31,8 @@ You must take the forms with you to your appointment.
 
 %The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
+^Your partner will need to follow the same process and pay the fees to get their own CNI.^
+
 If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
 
 - a [decree absolute or final order](/copy-decree-absolute-final-order)
