--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_local/_opposite_sex.govspeak.erb
@@ -24,6 +24,11 @@ The Danish authorities will sometimes accept a ‘no trace letter’ instead of 
 
 You can get a ‘no trace letter’ from the General Register Office. Ask them to make a search and quote reference ‘SEARCH 123’.
 
+$C
+**General Register Office**\\
+Telephone: +44 (0)300 123 1837 (8am to 8pm Monday to Friday and 9am to 4pm Saturday)
+$C
+
 ##Naturalisation of your partner if they move to the UK
 
 Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
