--- a/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/age_of_employee.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/age_of_employee.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  How old was your employee on the date they were made redundant?
+  Lets change the title!
 <% end %>
 
 <% content_for :suffix_label do %>
