--- a/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/age_of_employee.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-employee-redundancy-pay/questions/age_of_employee.govspeak.erb
@@ -7,5 +7,5 @@
 <% end %>
 
 <% content_for :error_message do %> 
-  Please enter an age between 16 and 100.
+  Enter an age between 16 and 100.
 <% end %>
