Edit redundancy outcome
Make another change on the same branch

--- a/lib/smart_answer_flows/calculate-employee-redundancy-pay/outcomes/done.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-employee-redundancy-pay/outcomes/done.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Statutory redundancy payment: £<%= statutory_redundancy_pay %> (£<%= statutory_redundancy_pay_ni %> In Northern Ireland).
+  Ooh look! Another change!
 
 <% end %>
 
