--- a/lib/smart_answer_flows/calculate-your-redundancy-pay/outcomes/done.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-redundancy-pay/outcomes/done.govspeak.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <% content_for :body do %>
-  ##How it’s worked out
+  ##How it’s worked 
 
   Pay is capped at £<%= rate %> (£<%= ni_rate %> In Northern Ireland) per week. Length of service is capped at 20 years.
 
