Update more stuff
Update more stuff

--- a/lib/smart_answer_flows/calculate-employee-redundancy-pay/outcomes/done.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-employee-redundancy-pay/outcomes/done.govspeak.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <% content_for :body do %>
-  ##How it’s worked out
+  ##How they do the thing
 
   Your employee's entitlement is <%= number_of_weeks_entitlement %> weeks.
 
