--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_title.govspeak.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>
   <% if calculator.partner_is_same_sex? %>
-    Same-sex marriage and civil partnership in the Philippines
+    Same-sex marriage in the Philippines
   <% else %>
     Marriage in the Philippines
   <% end %>
