--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_same_sex.govspeak.erb
@@ -6,7 +6,7 @@ Same-sex relationships in Denmark that are recognised as civil partnerships unde
 
 Contact the relevant local authorities in Denmark to find out about local laws, including what documents you’ll need.
 
-You should also check the [travel advice for Denmark](/foreign-travel-advice/denmark).
+^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Denmark](/foreign-travel-advice/denmark) before making any plans.
 
 ##What you need to do
 
