Replaced bereavement benefits with BSP
Removed: You might be eligible for a bereavement payment if you’re over State Pension age but your late spouse or civil partner was not getting any State Pension when they died.
This is no longer relevant. 

Changed: 'around' to 'about' for consistency

Replaced bereavement payments with Bereavement Support Payment.

--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_no_state_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_no_state_pension_outcome.govspeak.erb
@@ -27,7 +27,7 @@
 
   You won’t need to have the usual minimum of 10 qualifying years on your National Insurance record to get a State Pension.
 
-  You’ll get a State Pension of around:
+  You’ll get a State Pension of about:
 
   - <%= format_money(calculator.lower_basic_state_pension_rate) %> a week if you’re married or in a civil partnership and your partner has reached State Pension age
   - <%= format_money(calculator.higher_basic_state_pension_rate) %> a week if you become widowed, divorced or your civil partnership is dissolved
@@ -63,7 +63,7 @@
 
   ###Other benefits you might get
 
-  You might be eligible for a [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance), or [Bereavement Allowance](/bereavement-allowance) if you haven’t yet reached State Pension age. You might be eligible for a bereavement payment if you’re over State Pension age but your late spouse or civil partner was not getting any State Pension when they died.
+  You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age. 
 
   You should contact the [Future Pension Centre](/future-pension-centre) if you become widowed.
 
