Add an option for non-EEA family member tenant
Update the `what_nationality?` question to allow users to select that
the tenant is a non-EEA family member of a EU, EEA or Swiss citizen.

If the user selects the `non-era` option, currently they are sent to 
`outcome_can_rent`. This is a place holder until the new question they
should be routed to is implemented in the next commit.

Unit tests have been updated to accept the `non-eea` option.
Regression tests have been updated to test this new option.

--- a/lib/smart_answer_flows/landlord-immigration-check/questions/what_nationality.govspeak.erb
+++ b/lib/smart_answer_flows/landlord-immigration-check/questions/what_nationality.govspeak.erb
@@ -4,5 +4,6 @@
 
 <% options(
   "british-or-irish": "a British or Irish citizen",
-  "eea": "from another EU country, the EEA or Switzerland"
+  "eea": "from another EU country, the EEA or Switzerland",
+  "non-eea": "a non-EEA family member of someone from the EU, EEA or Switzerland",
 ) %>
