--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_british/_same_sex.govspeak.erb
@@ -37,9 +37,10 @@ $C
 
 ## Fees
 
-Service | Fee
--|-
-Issuing a CNI, Nulla Osta or equivalent | £50
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+    collection: calculator.services,
+    as: :service,
+    locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Denmark](/government/publications/denmark-consular-fees).
 
