Create an outcome per path for the Greece
The goal of this story is to migrate the flow for
Greece to use the outcome per path strategy.

So far test artefacts haven't been affected by this change.

As you observe the title only contains opposite sex title, this
becuase the same sex title doesn't use the content title block.

It uses the markdown syntax, this will be fix in later commits

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
@@ -156,16 +156,7 @@
                locals: { calculator: calculator } %>
   <% end %>
 
-  <% if calculator.ceremony_country == 'greece' %>
-    You’ll need to provide supporting documents, including:
-
-    - your passport
-    - Greek ID card (if available)
-    - proof of residence, such as a residence permit - check with the embassy or notary public to find out what you need
-    - equivalent documents for your partner
-
-
-  <% elsif calculator.ceremony_country == 'macao' %>
+  <% if calculator.ceremony_country == 'macao' %>
     <%= render partial: 'required_supporting_documents_macao.govspeak.erb' %>
   <% else %>
     <% if calculator.birth_certificate_required_as_supporting_document? && (calculator.notary_public_ceremony_country? || %w(japan macedonia).include?(calculator.ceremony_country)) %>
