Compress China to two outcomes (marriage-abroad)
In this commit I have:

* created two new outcome templates for China
  * As I don’t have the new content for these outcomes, I’ve reused
    some of the existing text. I’m expecting the content to be changed
    before this PR is sent for factcheck.
* added China to `two_questions_country` list in the calculator 
* updated the flow for China in the integration tests
* regenerated the expected responses and results file
* regenerated the test artefacts. 18 files have been removed, and two 
  have been added as expected.
* regenerated the checksums file

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
@@ -1,5 +1,3 @@
-Same-sex marriage in China
-
 You may be able to get married at the British embassy or consulate in China.
 
 Make an appointment at your nearest embassy or consulate.
@@ -16,7 +14,7 @@ Make an appointment at your nearest embassy or consulate.
 
 You need to have been living in China for 21 days. You and your partner will need to sign a declaration and provide proof of residence for example, an employer’s letter or a bank statement.
 
-You’ll both need to bring your original passports. You’ll also need evidence that your partner is free to marry - a document from their government or their passport that says they are unmarried. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need to provide:
+You’ll both need your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need either:
 
 - a [decree absolute or final order](/copy-decree-absolute-final-order)
 - the [death certificate](/order-copy-birth-death-marriage-certificate/)
@@ -42,17 +40,5 @@ You’ll need to pay a fee to register your marriage and a fee for your marriage
 
 Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
-## Fees
-
-Service | Fee
--|-
-Receiving a notice of registration | £50
-Registering a marriage | £150
-Issuing a marriage certificate | £50
-
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for China](/government/publications/china-consular-fees).
-
-You can pay by cash or credit card, but not by personal cheque.
-
-
-
+<%= render partial: 'services_and_fees.govspeak.erb',
+             locals: { calculator: calculator } %>
