Update the content for what_sort_of_passport?
The description of citizen and alien passports is different for Estonia
and Latvia. Rather than create a duplicate question that routes to the
same place under the same conditions, but has slightly different copy in
the template I have decide to just add a little bit of logic in the
template to switch the copy.

Adding logic to the template is a temporary measure to get it working.
This should be refactored in a later commit.

No test artefacts were affected because the question text is only
generated once and it has already been created for the Estonia flow.

--- a/lib/smart_answer_flows/check-uk-visa/questions/what_sort_of_passport.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/questions/what_sort_of_passport.govspeak.erb
@@ -2,7 +2,14 @@
   What sort of passport do you have?
 <% end %>
 
-<% options(
-  "citizen": "Estonian passport",
-  "alien": "Välismaalase pass",
-) %>
+<% if calculator.passport_country_is_estonia? %>
+  <% options(
+    "citizen": "Estonian passport",
+    "alien": "Välismaalase pass",
+  ) %>
+<% elsif calculator.passport_country_is_latvia? %>
+  <% options(
+    "citizen": "Latvian passport",
+    "alien": "Nepilsona Pase",
+  ) %>
+<% end %>
