Route DATV countries to new marriage outcome
If a country is in the `DATV` list, route them to the new marriage
outcome created in the previous commit.

Update the outcome content with additional text for Estonia and Latvia.

Integration tests have been updated.
Test artefacts have updated as expected.

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_marriage_visa_nat_datv.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_marriage_visa_nat_datv.govspeak.erb
@@ -5,6 +5,10 @@
 <% content_for :body do %>
   <%= render partial: 'stateless_or_refugee.govspeak.erb', locals: {calculator: calculator} %>
 
+  <% if calculator.passport_country_is_estonia? || calculator.passport_country_is_latvia? %>
+    ^ You must apply for your visa from the country you’re currently living in. ^
+  <% end %>
+
   Apply for a [Marriage Visitor visa](/marriage-visa) if you and your partner want to get married or enter into a civil partnership in the UK.
 
   Apply for a [family of a settled person visa](/join-family-in-uk) if your partner is already in the UK and you plan to stay longer than 6 months.
